<resources>
    <string name="app_name">Netflix</string>
    <string name="s_rie">Série</string>
    <string name="filmes">Filmes</string>
    <string name="justi_a">Justiça</string>
    <string name="esperan_a">Esperança</string>
    <string name="inspirador">Inspirador</string>
    <string name="assistir">Assistir</string>
    <string name="minha_lista">MINHA LISTA</string>
    <string name="Minha_lista">Mista Lista</string>
    <string name="detalhes">DETALHES</string>
    <string name="lan_amento">Lançamentos</string>
    <string name="rebeca_moreira_ribeiro" translatable="false">Rebeca Moreira Ribeiro</string>
</resources>